apps/productivity/filebrowser/backend-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: filebrowser
  timeout:
    http:
      requestTimeout: 0s
