apps/productivity/filebrowser/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: filebrowser
  retry:
    numRetries: 0
  timeout:
    http:
      requestTimeout: 0s
      connectionIdleTimeout: 1h
